# Grexa

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  Justfile  PLAN.md  README.md  about.hbs  about.toml  deny.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
apps/grexa-gui/: .qmlls.ini  Cargo.toml  build.rs
apps/grexa-gui/qml/: AboutPage.qml  AiChatPanel.qml  AppCheckBox.qml  AppComboBox.qml  AppFlatButton.qml  AppSpinBox.qml  AppTextField.qml  Card.qml  ContextPreviewDialog.qml  CreditsPage.qml  DesignTokens.qml  EmptyState.qml  FlagChip.qml  GplLicenseDialog.qml  HistoryPage.qml  LicensesPage.qml  Main.qml  NavItem.qml  PrimaryButton.qml  ProfilesPage.qml  RegexBuilderPage.qml  ResultRow.qml  SearchBar.qml  SearchPage.qml  SearchPage.qml.tmp.5625.0d96299d036b  SettingsPage.qml
apps/grexa-gui/src/: controller.rs  icon_theme.cpp  icon_theme.rs  main.rs  qobjects.rs  status.rs  tab.rs  workspace.rs
apps/grexa-gui/src/qobjects/: ai.rs  mod.rs  regex_builder.rs  results.rs  search.rs  settings.rs  workspace_handle.rs
crates/grexa-ai/: Cargo.toml
crates/grexa-ai/src/: lib.rs  secret.rs
crates/grexa-cli/: Cargo.toml
crates/grexa-cli/src/: main.rs
crates/grexa-cli/tests/: cli.rs
crates/grexa-containers/: Cargo.toml
crates/grexa-containers/src/: lib.rs  runtime.rs  search.rs
crates/grexa-containers/tests/: live.rs
crates/grexa-core/: Cargo.toml
crates/grexa-core/src/: baloo.rs  cancel.rs  constants.rs  desktop.rs  documents.rs  encoding.rs  lib.rs  models.rs  pattern.rs  preview.rs  replace.rs  search.rs  sort.rs  storage.rs
crates/grexa-core/tests/: gitignore_parity.rs  property.proptest-regressions  property.rs  root_safety.rs
crates/grexa-i18n/: Cargo.toml
crates/grexa-i18n/locales/de/: grexa.ftl
crates/grexa-i18n/locales/en/: grexa.ftl
crates/grexa-i18n/locales/ja/: grexa.ftl
crates/grexa-i18n/src/: lib.rs
docs/: SECURITY.md  accessibility.md  ai-provider-scope.md  architecture.md  baloo-spike.md  build-and-test.md  credits-third-party.md  dependency-license-review.md  feature-parity.md  features.md  grex-about-view-audit.md  grex-ai-search-service-audit.md  grex-audit-inventory.md  grex-context-preview-audit.md  grex-culture-comparison-audit.md  grex-docker-search-service-audit.md  grex-encoding-detection-audit.md  grex-gitignore-audit.md  grex-main-viewmodel-audit.md  grex-models-map.md  grex-regex-builder-audit.md  grex-scripts-audit.md  grex-search-service-audit.md  grex-search-tab-content-codebehind-audit.md  grex-search-tab-content-xaml-audit.md  grex-settings-view-audit.md  grex-status-text-audit.md  grex-storage-services-audit.md  grex-strings-migration-matrix.md  grex-supporting-services-audit.md  grex-tab-viewmodel-audit.md  grex-windows-search-integration-audit.md  grex-wsl-audit.md  gui-design.md  improvement-plan.md  linux-decisions.md  memory-budgets.md  migration-from-grex.md  reference.md  release-notes-0.1.0.md  (+7 more)
packaging/: com.visorcraft.Grexa.desktop  com.visorcraft.Grexa.metainfo.xml  io.visorcraft.Grexa.desktop  io.visorcraft.Grexa.metainfo.xml
packaging/appimage/: build.sh
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  copyright  rules
packaging/fedora/: Containerfile.fedora44  README.md  build-in-container.sh  container-entrypoint.sh  grexa.spec
packaging/flatpak/: breeze-6.10.patch  com.visorcraft.Grexa.yml  io.visorcraft.Grexa.yml
packaging/opensuse/: grexa.spec
scripts/: bench_vs_rg.sh  check_locale_sync.py  post_package_smoke.sh
