[package]
name = "grexa-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
grexa-core = { version = "0.1.0", path = "../grexa-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq.workspace = true
