[package]
name = "grexa-ai"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
grexa-core = { version = "1.4.0", path = "../grexa-core" }
keyring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq.workspace = true
