[package]
name = "grexa-containers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
grexa-core = { version = "0.1.0", path = "../grexa-core" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
