[package]
name = "grexa-containers"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
grexa-core = { version = "1.4.1", path = "../grexa-core" }
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[features]
default = []
# Enable end-to-end tests that drive a real Docker/Podman daemon.
# Tests under `crates/grexa-containers/tests/live.rs` only compile when
# this feature is on, so CI without a daemon stays green.
container-live = []

[dev-dependencies]
