[package]
name = "grexa-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
encoding_rs.workspace = true
globset.workspace = true
ignore.workspace = true
regex.workspace = true
tempfile.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true

